# jet-engine

./: .gitignore  README.md  dev.db  pyproject.toml  requirements.dev.in  requirements.in  requirements.txt  test.db  tox.ini
infra/storage/raw/: 6f07a510-07d9-4ab0-86c4-8408bbc31bc2.parquet
infra/storage/transformed/: c91bf72b-b33c-4e43-95d1-9e1641a5fb26.parquet
scripts/: version.py
src/jet_engine/: main.py
src/jet_engine/api/: router.py
src/jet_engine/api/routes/: datasets.py  meta.py  uploads.py
src/jet_engine/app/api/: router.py
src/jet_engine/app/services/: dataset_query_service.py  dataset_service.py  dataset_transforming_service.py  dataset_validation_service.py  mapping_service.py
src/jet_engine/app/templates/: base.html  mapping.html  upload.html  validate.html  workspace.html
src/jet_engine/core/: config.py
src/jet_engine/db/: base.py  models.py  session.py
src/jet_engine/domain/enums/: __init__.py  aggregation.py  axis.py  field_role.py  filter_operator.py  logical_operator.py  sort_direction.py
src/jet_engine/middleware/: trusted_host.py
src/jet_engine/models/: enums.py  field.py
src/jet_engine/services/: dataset_query_service.py  dataset_transforming_service.py  dataset_validation_service.py
tests/: conftest.py  test_health.py  test_query.py  test_transform.py  test_upload.py  test_upload_mapping.py  test_validation.py  utils.py
tests/data/: invalid_data.csv  journal_correct.csv  journal_data_corrupted.csv  journal_data_invalid.csv  journal_data_valid2.csv  journal_mapping.json  journal_mapping_correct.json  sample_upload.csv
(+45 files in other folders)
