[project]
name = "jet-engine"
description = "Application that flags transactions in JET."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["JET", "jet_engine", "engine", "Journal Entry Testing"]
authors = [
  {name = "Rik van der Ham", email = "r.vanderham@cbaruba.org"}
]
maintainers = [
  {name = "Rik van der Ham", email = "r.vanderham@cbaruba.org"}
]
classifiers = [ 
  "Development Status :: 1 - Planning",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "version"]

[project.urls]  # Optional
"Homepage" = "https://gitlab.com/..."
"Bug Reports" = "https://gitlab.com/..."
"Source" = "https://gitlab.com/..."

[project.scripts]
sample = "src:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
version = {file = ["VERSION"]}

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"